# level4-cv-finalproject-hackathon-cv-14-lv3

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/conda/: meta.yml
.github/workflows/: ci.yml  code-quality.yml  dependency-update.yml  pre-commit.yml  validate-n8n-images.yml
.github/workflows/n8n/: Chat_workflow.json  Inventory_Workflow.json  Recall_Workflow.json  Trend_Search.json  Trend_Workflow.json  Trend_send_mail.json  auto_order_agent.json  auto_order_agent_workflow.json  category_finder.json  recall_agent.json  recall_searching.json  recall_workflow.json  sample.json  trend_send_mail.json
app/: README.md  api.py  run_reflexion.sh
app/crawler/: main.py  naver_crawler.py
app/dags/: README.md  main.py  naver_crawler.py  naver_shopping_crawler.py  naver_shopping_dag.py  package-lock.json  package.json  product_categorize_dag.py  product_categorizer.py  product_pipeline_dag.py
app/webshop_agent/: base_prompt.txt  env_history.py  generate_reflections.py  log_extract.py  order_product.py  run.py  run_http.sh  run_test.sh  utils.py  webshop_trial.py
backend/: README.md  main.py
crawling/: main.py
dash/: dash_for_db.py  dash_from_db.py  dash_viz.py
database/: README.md  category_search.py  config.py  csv_merge.py  csv_to_db.py  csv_to_postgre.py  csv_to_postgre_only_train.py  db_merge.py  db_to_postgre.py  export_db.py  main.py  mapping.py  postgre_to_sql.py
database/embeddings/: README.md  analyze_embeddings.py  build_embeddings_db.py  gnn_visualizer.py  hierarchical_category_search.py  supabase_uploader.py
database/embeddings/embedding_analysis/: category_graph.html  enhanced_graph_analysis.md
database/format_converter/: config.py  csv_to_db.py  db_to_postgre.py  db_to_supabase.py
database/preprocessing/: mapping.py  monthly_converter.py  time_series_converter.py  weekly_converter.py
docs/: pre-commit-guide.md  ruff-guide.md
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  ChatPage.js  DashPage.js  InventoryPage.js  Layout.js  index.js
src/GORANI/: __init__.py
trending/: ocr.py
