[tool.poetry.dependencies]
pytest = "^8.3.4"
ruff = "^0.8.6"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 120
target-version = ['py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
# 자동 생성되는 파일들 제외
(
    wandb/|
    logs/|
    checkpoints/|
    .pytest_cache/|
    __pycache__
)
'''

[tool.ruff]
line-length = 120
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "TID",  # flake8-tidy-imports
    "NPY",  # NumPy specific rules
    "PT",   # pytest style
    "RUF",  # Ruff specific rules
]
lint.ignore = [
    "E402",  # module level imports not at top
    "B006",  # mutable-argument-default
    "B008",  # do-not-perform-function-call-in-argument-defaults
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["D", "PLR2004"]
"scripts/*" = ["T20"]
