[tool.poetry]
name = "level4-cv-finalproject-hackathon-cv-14-lv3"
version = "0.1.1"
description = "Topic generator using transformers"
authors = ["Namgyu-Youn <yynk2012@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src/GORANI" }
]
[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ruff = "^0.9.0"
pytest-cov = "^4.1.0"
pandas = "^2.2.3"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 140
target-version = "py310"

lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "RUF",  # Ruff-specific rules
    "I",    # isort
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
    "S",    # flake8-bandit
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]
"scripts/*" = ["T20"]
"src/GORANI/__init__.py" = ["N999"]
