[tool.poetry]
name = "level4-cv-finalproject-hackathon-cv-14-lv3"
version = "0.1.1"
description = "Topic generator using transformers"
authors = ["Namgyu-Youn <yynk2012@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src/GORANI" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ruff = "^0.9.0"
pytest-cov = "^4.1.0"
pandas = "^2.2.3"
sqlalchemy = "<2.0.0"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
tqdm = "^4.67.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
argparse = "^1.4.0"
sentence-transformers = "^3.4.0"
matplotlib = "^3.10.0"
tabulate = "^0.9.0"
community = "^1.0.0b1"
pyvis = "^0.3.2"
networkx = "^3.4.2"
python-louvain = "^0.16"
openai = "^1.61.0"
supabase = "^2.12.0"
plotly = "^6.0.0"
seaborn = "^0.13.2"
python-dotenv = "^1.0.1"
httpx = "^0.28.1"
psutil = "^6.1.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
scrapy = "^2.12.0"
selenium = "^4.28.1"
webdriver-manager = "^4.0.2"
pillow = "^11.1.0"
pytesseract = "^0.3.13"
apache-airflow = "^2.10.4"
graphviz = "^0.20.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 140
target-version = "py310"
ignore = ["S104"]

lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "RUF",  # Ruff-specific rules
    "I",    # isort
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
    "S",    # flake8-bandit
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]
"scripts/*" = ["T20"]
"src/GORANI/__init__.py" = ["N999"]
